testdata/cases/analyze/invalid_strconv_argument.expected
testdata/cases/analyze/invalid_strconv_argument.go:6:33: error[invalid-strconv-argument]: parsing base must be 0 or between 2 and 36
